# fund

./: CMakeLists.txt
lab1/task2/: main.c
lab1/task_1/: main.c
lab1/task_10/: main.c
lab1/task_2/: main.c
lab1/task_3/: main.c
lab1/task_4/: main.c
lab1/task_5/: main.c
lab1/task_6/: main.c
lab1/task_7/: 1.txt  main.c
lab1/task_8/: main.c
lab1/task_9/: main.c
lab2/task_1/: functions.c  header.h  main.c
lab2/task_10/: functions.c  header.h  main.c
lab2/task_2/: functions.c  header.h  main.c
lab2/task_3/: 1.txt  functions.c  header.h  main.c
lab2/task_4/: functions.c  header.h  main.c
lab2/task_5/: functions.c  functions_2.c  header.h  main.c
lab2/task_6/: functions.c  functions_2.c  header.h  main.c
lab2/task_7/: functions.c  header.h  main.c
lab2/task_8/: functions.c  header.h  main.c
lab2/task_9/: functions.c  header.h  main.c
lab3/task_1/: functions.c  header.h  main.c
lab3/task_10/: functions.c  header.h  main.c
lab3/task_3/: functions.c  header.h  input.txt  main.c  out.txt
lab3/task_4/: header.h  main.c  post.c  string.c  validate.c
lab3/task_5/: functions.c  header.h  main.c
lab3/task_9/: functions.c  header.h  main.c  validate.c
lab4/task_1/: functions.c  header.h  main.c
lab4/task_4/: functions.c  functions_trace.c  header.h  main.c  validate.c
lab4/task_7/: functions.c  header.h  main.c
