cmake_minimum_required(VERSION 3.26)
project(fund_ C)

set(CMAKE_C_STANDARD 11)

add_executable(fund_
        lab1/task_1/main.c
        lab1/task_1/main.c
        lab1/task_1/main.c
        lab1/task2/main.c
        lab1/task_3/main.c
        lab1/task_4/main.c
        lab1/task_5/main.c
        lab1/task_6/main.c
        lab1/task_7/main.c
        lab1/task_8/main.c
        lab1/task_9/main.c
        lab1/task_10/main.c
        lab2/task_1/main.c
        lab2/task_1/header.h
        lab2/task_1/functions.c
        lab2/task_2/main.c
        lab2/task_2/functions.c
        lab2/task_2/header.h
        lab2/task_3/main.c
        lab2/task_3/functions.c
        lab2/task_3/header.h
        lab2/task_4/main.c
        lab2/task_4/functions.c
        lab2/task_4/header.h
        "lab2/task_5/main.c"
        lab2/task_5/functions.c
        lab2/task_5/header.h
        lab2/task_5/functions_2.c
        lab2/task_6/main.c
        lab2/task_6/functions.c
        lab2/task_6/functions_2.c
        lab2/task_6/header.h
        lab2/task_7/main.c
        lab2/task_7/functions.c
        lab2/task_7/header.h
        lab2/task_9/main.c
        lab2/task_9/functions.c
        lab2/task_9/header.h
        lab2/task_8/main.c
        lab2/task_8/header.h
        lab2/task_8/functions.c
        lab2/task_10/main.c
        lab2/task_10/header.h
        lab2/task_10/functions.c
)
